# metadata_extractor

./: pyproject.toml
metadata_extractor.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
metadata_extractor/extractors/: enrichment.py
metadata_extractor/metadata_extractor.egg-info/: SOURCES.txt  top_level.txt
