[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "metadata-extractor"
version = "0.1.0"
description = "Modular database metadata extraction engine"
readme = "README.md"
requires-python = ">=3.9"

authors = [
  { name = "Your Team" }
]

dependencies = [
  "sqlalchemy",
  "pandas",
  "python-dotenv",
]

[tool.setuptools.packages.find]
where = ["."]


